// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render outline button by default 1`] = `
.c0 {
  padding: 0.6rem 1.2rem;
  width: 100%;
  border-radius: 0.4rem;
  border: 1px solid #FABA40;
  font-size: 1.8rem;
  box-shadow: 0px 8px 15px rgba(0,0,0,0.1);
  font-weight: 700;
  cursor: pointer;
  background: #FFFFFF;
  color: #FABA40;
}

.c0:hover {
  background-color: #fef0d5;
  color: #cf8905;
}

<button
  class="c0"
>
  Buy now
</button>
`;

exports[`<Button /> should render solid button  1`] = `
.c0 {
  padding: 0.6rem 1.2rem;
  width: 100%;
  border-radius: 0.4rem;
  border: 1px solid #FABA40;
  font-size: 1.8rem;
  box-shadow: 0px 8px 15px rgba(0,0,0,0.1);
  font-weight: 700;
  cursor: pointer;
  color: #FFFFFF;
  background: #FABA40;
}

.c0:hover {
  background-color: #fef0d5;
  color: #cf8905;
}

<button
  class="c0"
>
  Buy now
</button>
`;
